src/test/ui/use/issue-18986.stderr
error[E0574]: expected struct, variant or union type, found trait `Trait`
  --> $DIR/issue-18986.rs:8:9
   |
LL |         Trait { x: 42 } => ()
   |         ^^^^^ not a struct, variant or union type

error: aborting due to previous error

